Fix Icon text alignment - Fix sold icon text alignment on desktop and mobile - Show prices in nearby cities in 1 columns for mobile

--- a/BikeWale.UI/m/css/used-details.css
+++ b/BikeWale.UI/m/css/used-details.css
@@ -678,4 +678,12 @@ input[type="text"]:focus, input[type="number"]:focus { outline:none; box-shadow:
    width: 62px;
    height: 46px;
    background-position: 0 -133px;
+   vertical-align: middle;
+}
+
+.bike-sold-msg {
+    display: inline-block;
+    vertical-align: middle;
+    width: 75%;
+    padding: 10px 20px;
 }
